# public-orangepi5-wfb-ng-module

./: .gitignore  CMakeLists.txt  README.md  XrdpSetup.md  setup-xrdp-server.sh
config-editor/: babel.config.js  package-lock.json  package.json  webpack.config.js
config-editor/middleware/: logger.js
config-editor/public/: index.html
config-editor/src/: App.css  App.jsx
config-editor/src/components/: AddressInput.css  AddressInput.jsx  BurgerMenu.jsx  ConfigEditor.css  ConfigEditor.jsx  LogsViewer.jsx  RecentAddresses.jsx  SSHTerminal.jsx  (+1 more)
configurator/: config.py  favorites.json  main.py  models.py  requirements.txt  start-web.sh  tools.py
configurator/app/: config.py  main.py  routes.py  tools.py
configurator/configurator/: index.html
configurator/data/: favorites.json
configurator/routers/: api_crud.py  api_system.py
data/: favorites.json
driver/8812au/: 88XXau_wfb.mod  setup-8812au.sh
driver/88x2bu/: setup-88x2bu-20210702.sh  setup_88x2bu-20210702.sh
scripts/: installer.sh  net_mode_monitor.sh  run-service-received.sh  run-service-sender.sh  rx_stream_jpeg.sh  rx_stream_x264.sh  setup.sh  setup_iw.sh  system-include.sh  tx.key  tx_stream_jpeg.sh  tx_stream_x264.sh
scripts/subs/: check_directory.sh  check_ethernet.sh  checksum.sh  create_conf.sh  create_rules.sh  generate_checksum.sh  reboot_system.sh  reboot_wfb.sh  reconf.sh  run_servers.sh
source/: fec.c  rx.cpp  tx.cpp
systemd/: receiver.service  rx_stream.service  sender.service  tx_stream.service
tests/: sysconfwfb.conf  test_create_configuration.sh  test_read_from_config.sh
(+7 files in other folders)
